--- a/src/app/heatmap/heatmap.component.html
+++ b/src/app/heatmap/heatmap.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <button (click)='BT_Test_Mean()'>BT_Test_Mean</button>
 <button (click)='BT_Test_Location()'>BT_Test_Location</button>
 
