--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,67 @@
-<p>home works!</p>
+<app-header></app-header>
+<meta charset="utf-8">
+<div class="bg">
+     <div class="container">
+          <br><br><br><br><br>
+          <div class="p-grid">
+               <div class="row-sm-6">
+                    <div class="col-sm-6">
+                         <p-card header="LATITUDE" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
+                              <dir align="right">
+                                   <i class="pi pi-globe"></i>
+                              </dir>
+                              <h3 align="center">16.2504</h3><br>
+                         </p-card>
+                    </div>
+                    <div class="col-sm-6">
+                         <p-card header="RSSI" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
+                              <dir align="right">
+                                   <i class="pi pi-wifi"></i>
+                              </dir>
+                              <h3 align="center">-42</h3>
+                              <p align="right">dBm</p>
+                         </p-card>
+                    </div>
+                    <div class="col-sm-6">
+                         <p-card header="FREQUENCY" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
+                              <dir align="right">
+                                   <i class="pi pi-chart-line"></i>
+                              </dir>
+                              <h3 align="center">923.0</h3>
+                              <p align="right">Mhz</p>
+                         </p-card>
+                    </div>
+               </div>
+
+               <div class="row-sm-6">
+                    
+                    <div class="col-sm-6">
+                         <p-card header="LONGITUDE" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
+                              <dir align="right">
+                                   <i class="pi pi-globe"></i>
+                              </dir>
+                              <h3 align="center">103.249931</h3><br>
+                         </p-card>
+                    </div>
+                    <div class="col-sm-6">
+                         <p-card header="SNR" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
+                              <dir align="right">
+                                   <i class="pi pi-wifi"></i>
+                              </dir>
+                              <h3 align="center">-10</h3>
+                              <p align="right">dB</p>
+                         </p-card>
+                    </div>
+                    <div class="col-sm-6">
+                         <p-card header="TIME" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
+                              <dir align="right">
+                                   <i class="pi pi-clock"></i>
+                              </dir>
+                              <h3 align="center">2020/09/30 19:30:50 </h3>
+                              <br>
+                         </p-card>
+                    </div>
+               </div>
+          </div>
+     </div>
+</div>
