--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,8 @@
-<p>map works!</p>
+<app-header></app-header>
+
+<agm-map
+     [latitude]="lat"
+     [longitude]="lng"
+     [zoom]="zoom" 
+>
+</agm-map>
