--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,8 @@
 <p-toolbar>
      <div class="p-toolbar-group-left">
-
+          <img routerLink="/home"src="../../assets/images/logo.png" width="25px" alt="">&nbsp;
+          <a routerLink="/home">Home</a> &nbsp;
+          <a routerLink="/map">map</a> &nbsp;
+          <a routerLink="/heatmap">heatmap</a> &nbsp;
      </div>
 </p-toolbar>
