--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,62 +2,61 @@
 <meta charset="utf-8">
 <div class="bg">
      <div class="container">
-          <br><br><br><br><br>
           <div class="p-grid">
-               <div class="row-sm-6">
+               <div class="row-sm-6" style="margin-top: 3%;">
                     <div class="col-sm-6">
                          <p-card header="LATITUDE" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <i class="pi pi-globe"></i>
+                                   <img src="../../assets/images/lat.jpg" alt="">
                               </dir>
-                              <h3 align="center">16.2504</h3><br>
+                              <h3 align="center">{{this.mean_latitude}}</h3><br>
                          </p-card>
                     </div>
                     <div class="col-sm-6">
                          <p-card header="RSSI" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <i class="pi pi-wifi"></i>
+                                   <img src="../../assets/images/rssi.jpg" alt="">
                               </dir>
-                              <h3 align="center">-42</h3>
+                              <h3 align="center">{{this.mean_rssi}}</h3>
                               <p align="right">dBm</p>
                          </p-card>
                     </div>
                     <div class="col-sm-6">
                          <p-card header="FREQUENCY" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <i class="pi pi-chart-line"></i>
+                                   <img src="../../assets/images/fre.jpg" alt="">
                               </dir>
-                              <h3 align="center">923.0</h3>
+                              <h3 align="center">{{this.mean_frequency}}</h3>
                               <p align="right">Mhz</p>
                          </p-card>
                     </div>
                </div>
 
-               <div class="row-sm-6">
+               <div class="row-sm-6" style="margin-top: 3%;">
                     
                     <div class="col-sm-6">
                          <p-card header="LONGITUDE" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <i class="pi pi-globe"></i>
+                                   <img src="../../assets/images/long.jpg" alt="">
                               </dir>
-                              <h3 align="center">103.249931</h3><br>
+                              <h3 align="center">{{this.mean_longitude}}</h3><br>
                          </p-card>
                     </div>
                     <div class="col-sm-6">
                          <p-card header="SNR" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <i class="pi pi-wifi"></i>
+                                   <img src="../../assets/images/rssi.jpg" alt="">
                               </dir>
-                              <h3 align="center">-10</h3>
+                              <h3 align="center">{{this.mean_snr}}</h3>
                               <p align="right">dB</p>
                          </p-card>
                     </div>
                     <div class="col-sm-6">
                          <p-card header="TIME" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <i class="pi pi-clock"></i>
+                                   <img src="../../assets/images/time.png" alt="">
                               </dir>
-                              <h3 align="center">2020/09/30 19:30:50 </h3>
+                              <h3 align="center">{{this.mean_time}}</h3>
                               <br>
                          </p-card>
                     </div>
