--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
 <agm-map
-     [latitude]="lat"
-     [longitude]="lng"
+     [latitude]="latitude"
+     [longitude]="longitude"
      [zoom]="zoom" 
 >
 </agm-map>
