--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<div class="center" style="margin-top: 1%;">
+     <p>Tinnakorn Meejantan</p>
+     <p>Pissanu Kumngok</p>
+</div>
