--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+
 <meta charset="utf-8">
 <div class="bg">
      <div class="container">
@@ -64,3 +65,5 @@
           </div>
      </div>
 </div>
+
+<app-footer></app-footer>
