--- a/src/app/heatmap/heatmap.component.css
+++ b/src/app/heatmap/heatmap.component.css
@@ -1,3 +1,8 @@
+.page-content img {
+    max-width: 100%;
+    height: auto!important;
+}
 agm-map {
-     height: 600px;
- }
+    height:600px;
+    width:100%;
+}
