--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,30 +1,36 @@
 .box {
-     background-color: var(--surface-e);
-     text-align: center;
-     padding-top: 1rem;
-     padding-bottom: 1rem;
-     border-radius: 4px;
-     box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
+    background-color: var(--surface-e);
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-radius: 4px;
+    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
  }
  .box-stretched {
-     height: 100%;
+    height: 100%;
  }
 
  .vertical-container {
-     margin: 0;
-     height: 200px;
-     background: var(--surface-d);
-     border-radius: 4px;
+    margin: 0;
+    height: 200px;
+    background: var(--surface-d);
+    border-radius: 4px;
  }
 
 /* body, html {
      height: 100%;
 }   */
 .bg {
-     background-image: url("../../assets/images/background.jpg");
-     height: 900px;
-     background-position: center;
-     background-repeat: no-repeat;
-     background-size: cover;
-     /* transition: all .4s ease; */
+    background: url("../../assets/images/background.jpg");
+    height: 800px;
+    max-width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: all .4s ease;
+
+}
+.page-content img {
+    max-width: 100%;
+    height: auto!important;
 }
