--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-
+<a routerLink="/home">Home</a> &nbsp;
 <!-- <button (click)='BT_Test_Mean()'>BT_Test_Mean</button>
 <button (click)='BT_Test_Location()'>BT_Test_Location</button>
 
