--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,6 @@
 <app-header></app-header>
-
 <meta charset="utf-8">
-<div class="bg">
+<div class="bg" style="margin-top: 0.5%;">
      <div class="container">
           <div class="p-grid">
                <div class="row-sm-6" style="margin-top: 3%;">
