--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div class="center" style="margin-top: 1%;">
-     <p>Tinnakorn Meejantan</p>
-     <p>Pissanu Kumngok</p>
+     <a href="https://www.facebook.com/Tinnakorn.Me"><p>©Tinnakorn Meejantan סּ͡͡_סּ͡</p></a>
+     <a href="https://www.facebook.com/kardRacing"><p> &nbsp;&nbsp; ©Pissanu Kumngok סּ͡͡_סּ͡</p></a>
 </div>
