--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <app-header></app-header>
 <meta charset="utf-8">
-<div class="bg" style="margin-top: 0.5%;">
+<div style="margin-top: 0.5%;">
      <div class="container">
           <div class="p-grid">
-               <div class="row-sm-6" style="margin-top: 3%;">
+               <div class="row-sm-12" style="margin-top: 3%;">
                     <div class="col-sm-6">
                          <p-card header="LATITUDE" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <img src="../../assets/images/lat.jpg" alt="">
+                                   <img src="../../assets/images/lat.jpg">
                               </dir>
                               <h3 align="center">{{this.mean_latitude}}</h3><br>
                          </p-card>
@@ -15,7 +15,7 @@
                     <div class="col-sm-6">
                          <p-card header="RSSI" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <img src="../../assets/images/rssi.jpg" alt="">
+                                   <img src="../../assets/images/rssi.jpg">
                               </dir>
                               <h3 align="center">{{this.mean_rssi}}</h3>
                               <p align="right">dBm</p>
@@ -24,20 +24,30 @@
                     <div class="col-sm-6">
                          <p-card header="FREQUENCY" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <img src="../../assets/images/fre.jpg" alt="">
+                                   <img src="../../assets/images/fre.jpg">
                               </dir>
                               <h3 align="center">{{this.mean_frequency}}</h3>
                               <p align="right">Mhz</p>
                          </p-card>
                     </div>
+                    <div class="col-sm-6">
+                         <p-card header="Gateway of MSU" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
+                              <dir align="right">
+                                   <img src="../../assets/images/distance.png">
+                              </dir>
+                              <h3 align="center">{{this.distanceGW2}}</h3>
+                              <p align="right">เมตร</p>
+                         </p-card>
+                    </div>
                </div>
+               
 
-               <div class="row-sm-6" style="margin-top: 3%;">
+               <div class="row-sm-12" style="margin-top: 3%;">
                     
                     <div class="col-sm-6">
                          <p-card header="LONGITUDE" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <img src="../../assets/images/long.jpg" alt="">
+                                   <img src="../../assets/images/long.jpg">
                               </dir>
                               <h3 align="center">{{this.mean_longitude}}</h3><br>
                          </p-card>
@@ -45,7 +55,7 @@
                     <div class="col-sm-6">
                          <p-card header="SNR" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <img src="../../assets/images/rssi.jpg" alt="">
+                                   <img src="../../assets/images/rssi.jpg">
                               </dir>
                               <h3 align="center">{{this.mean_snr}}</h3>
                               <p align="right">dB</p>
@@ -54,12 +64,29 @@
                     <div class="col-sm-6">
                          <p-card header="TIME" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
                               <dir align="right">
-                                   <img src="../../assets/images/time.png" alt="">
+                                   <img src="../../assets/images/time.png">
                               </dir>
                               <h3 align="center">{{this.mean_time}}</h3>
                               <br>
                          </p-card>
                     </div>
+                    <div class="col-sm-6">
+                         <p-card header="Gateway of Sky Kingdom" [style]="{'width': '33rem', 'margin-bottom': '3em'}">
+                              <dir align="right">
+                                   <img src="../../assets/images/distance.png">
+                              </dir>
+                              <h3 align="center">{{this.distanceGW1}}</h3>
+                              <p align="right">เมตร</p>
+                         </p-card>
+                    </div>
+               </div>
+               <div class="row-sm-12" style="margin-top: 3%;">
+                    <p-card header="Signal of Gateway" [style]="{'width': '68rem', 'margin-left': '1em', 'margin-bottom': '3em'}">
+                         <dir align="right">
+                              <img src="../../assets/images/gateway.png">
+                         </dir>
+                         <h3 align="center">{{this.fromgateway}}</h3>
+                    </p-card>
                </div>
           </div>
      </div>
