--- a/src/app/heatmap/heatmap.component.css
+++ b/src/app/heatmap/heatmap.component.css
@@ -3,13 +3,15 @@
     height: auto!important;
 }
 agm-map {
-    height:850px;
-    width:100%;
+    height: 100%;
+    width: 100%;
+    position: absolute;
 }
+
 .right {
     float: right;
 }
-button{
+/* .button{
     height: 30px;
     width: 70px;
-}
+} */
