--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,12 @@
-<div class="center" style="margin-top: 1%;">
-     <a href="https://www.facebook.com/Tinnakorn.Me"><p>©Tinnakorn Meejantan סּ͡͡_סּ͡</p></a>
-     <a href="https://www.facebook.com/kardRacing"><p> &nbsp;&nbsp; ©Pissanu Kumngok סּ͡͡_סּ͡</p></a>
+<div class="container">
+     <dir align="center">
+          
+          <a href="https://www.facebook.com/Tinnakorn.Me" style="color:black"><p></p>
+               ©Tinnakorn Meejantan סּ͡͡_סּ͡
+          </a> &nbsp;<a href="https://www.facebook.com/kardRacing" style="color:black">
+               ©Pissanu Kumngok סּ͡͡_סּ͡
+          </a>
+          
+     </dir>
 </div>
+
