--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <meta charset="utf-8">
 
-<body style='margin-top: 2%'>
+<body style="background-color: rgb(243, 247, 188);">
      <div id="mySidenav" class="sidenav {{this.backgroundColor}}">
           <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
           <a type="label" class="{{this.backgrountextdColor}}">สีการ์ด</a>
@@ -116,15 +116,15 @@
                <img src="./assets/images/icons8-settings-512.png" width="40px">
           </button>
      </div>
-
-     <div class="container {{this.backgroundColor}}"><br>
+     <br>
+     <div class="container {{this.backgroundColor}}" style="margin-top: 15;"><br>
           <div class="p-grid p-flex-row">
                <div class="p-col">
                     <div class="card {{this.colorCard}} mb-1">
                          <div class="card-header">
                               <table class="{{this.colortextCard}}" style="width:100%">
                                    <tr>
-                                        <td align="left"><img src="./assets/images/icons8-gps-signal-100.png" width="40px"></td>
+                                        <td align="left"><img src="./assets/images/icons8-location-100.png" width="40px"></td>
                                         <td><h1 class="font">ตำแหน่ง</h1></td>
                                    </tr>
                               </table>
