--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,11 +2,11 @@
      <dir align="center">
           
           <a href="https://www.facebook.com/Tinnakorn.Me" style="color:black" class="font">
-               <img src="../../assets/images/icons8-facebook-500.png" width="40px">
+               <img src="./assets/images/icons8-facebook-500.png" width="40px">
                ©Tinnakorn Meejantan סּ͡͡_סּ͡
           </a>
           <a href="https://www.facebook.com/kardRacing" style="color:black" class="font">
-               <img src="../../assets/images/icons8-facebook-500.png" width="40px">
+               <img src="./assets/images/icons8-facebook-500.png" width="40px">
                ©Pissanu Kumngok סּ͡͡_סּ͡
           </a>
           
