--- a/src/app/heatmap/heatmap.component.html
+++ b/src/app/heatmap/heatmap.component.html
@@ -1,4 +1,5 @@
 <!-- <app-header></app-header> -->
+
 <agm-map
   [latitude]="latCenter"
   [longitude]="lngCenter"
@@ -16,9 +17,22 @@
   (mapReady)="onMapLoad($event)"
   (mapClick)="onChoseLocation($event)">
 
-  <button id="myLocation" class="toggle-button controls button" (click)="myLocation()">
-    <span class="material-icons">my_location</span>
-  </button>
+  <a id="home" type="button" routerLink="/home"><img src="./assets/images/icons8-home-automation-64.png"  width="60px"></a>
+  <a id="myLocation" type="button" (click)="myLocation()"><img src="./assets/images/icons8-location-update-96.png"  width="60px"></a>
+
+  <div id="changSF" class="controls mode-selector">
+    <input type="radio" name="type" (click)="sf7()" checked="{{checkedsf7}}"/>
+    <label for="changemode-walking">sf 7</label> &nbsp;
+  
+    <input type="radio" name="type" (click)="sf9()" checked="{{checkedsf9}}" />
+    <label for="changemode-transit">sf 9</label> &nbsp;
+  
+    <input type="radio" name="type" (click)="sf12()" checked="{{checkedsf12}}" />
+    <label for="changemode-driving">sf 12</label> &nbsp;
+    
+    <input type="radio" name="type" (click)="Allsf()" checked="{{checkedAll}}" />
+    <label for="changemode-driving">All sf</label> 
+  </div>
   
   <!-- <agm-marker 
     [latitude]="this.latCenter"
@@ -33,6 +47,8 @@
       </p>
     </agm-info-window>
   </agm-marker> -->
+
+
 
   <agm-marker 
     *ngFor="let m of markers; let i = index"
